--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ name: Build and Push Backend Image
 on:
   push:
     branches:
-      - main  # Runs the workflow when you push to the main branch
+      - master
 
 jobs:
   build:
