--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,6 +12,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: localization_platform
+          MYSQL_USER: ariane
+          MYSQL_PASSWORD: Kv66QSPQ9hagKiVY
+        ports:
+          - "3306:3306"
 
     steps:
       - name: Checkout Repository
