--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=localizationApp
-spring.datasource.url=jdbc:mysql://mysql:3306/localization_platform
+spring.datasource.url=jdbc:mysql://10.99.26.160:3306/localization_platform
 spring.datasource.username=ariane
 spring.datasource.password=Kv66QSPQ9hagKiVY
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
