--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,12 @@
 			<version>4.0.0-M1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
