--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ spring.redis.host=10.12.1.76
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.ssl.enabled=true
+
+image.storage.path=//DC1/Devellopement/Ariane/image-storage/
+spring.web.resources.static-locations=file:${image.storage.path}
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
